# ProfessionalJobSearch

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_email.py
app/: main.py
app/auth/: deps.py  hash.py  jwt.py
app/config/: cache.py  error_handler.py  exceptions.py  lifespan.py  logging.py  middleware.py  redis.py  setting.py  user_exceptions.py
app/db/: database.py  fake_db.py
app/db/alembic/: env.py
app/db/alembic/versions/: 08ed9083356f_initial.py  19b67d456d3b_add_users_table.py  4077dce5c08e_initial_migrationw.py  6fcb1ec7af92_add_jobs_table.py  (+8 more)
app/models/: __init__.py  aplications_model.py  company_model.py  jobs_model.py  messages_model.py  notifications_model.py  prod_models.py  resumes_model.py  users_model.py
app/routers/: aplications.py  auth.py  email.py  jobs.py  messages.py  notifications.py  passwords.py  resumes.py  users.py  ws_messages.py
app/schemas/: aplication_schema.py  application_schema.py  company_schema.py  job_schema.py  message_schema.py  notification_schema.py  resume_schema.py  user_schema.py
app/services/: aplications_service.py  application_service.py  auth_service.py  categories_service.py  company_service.py  jobs_service.py  messages_service.py  notifications_service.py  resumes_service.py  users_service.py
app/utils/: audit.py  connection_manager.py  dto.py  email.py  enums.py  required.py  security.py  slug.py  text_processing.py  tokens.py  validators.py
html/: index.html
tests/unit/test_schemas/: test_user_schemas.py
